syntax = 'proto3';
package torrents;

import "google/api/annotations.proto";

service Torrent {
	rpc AddTorrent (AddTorrentRequest) returns (AddTorrentResponse) {
       option (google.api.http) = {
           post: "/v1/torrent"
           body: "*"
       };
    }
	rpc GetStatus (GetStatusRequest) returns (GetStatusResponse) {
        option (google.api.http) = {
            get: "/v1/torrent"
        };
    }
}

message AddTorrentRequest{
	string magnetLink = 1;
}

message AddTorrentResponse {
	bool ok = 1;
}

message GetStatusRequest {
}

message GetStatusResponse {
	repeated TorrentStatus torrents = 1;
}

message TorrentStatus {
	string Id = 1;
    string Done = 2;
    string Have = 3;
    string Eta = 4;
    string Up = 5;
    string Down = 6;
    string Ratio = 7;
    string Status = 8;
    string Name = 9;
}
